# ur5-gazebo-ros2-docker

./: .gitignore  CREATION_REPORT.md  PUSH_TO_GITEE.md  README.md
docs/: ANTHROPIC_API_KEY_SETUP.md  CLAUDE_CODE_SETUP.md  DISPATCHER_CRON_CONFIG.md  GITEE_PUSH_GUIDE.md  GITHUB_LABELS_CONFIG.md  REPO_NAMING.md  REPO_USAGE.md  robot-ai-agent-framework-analysis.md  robotics-ai-agent-papers-2025-2026.md
docs/analysis/: README.md  detailed-comparison.md  phyagentos-analysis.md  robot-agent-frameworks-survey.md  robot-agent-frameworks.md  robot-openclaw-recommendations.md  solution-comparison.md
docs/deployment/: deployment-report.md  scheme-a-deployment.md
docs/improvements/: backlog.md
docs/migration/: humble-migration.md  progress-report-2026-04-18.md
docs/operations/: status.md
docs/performance/: optimization-guide.md
docs/research/: robotics-ai-agent-papers-2026-04.md  robotics-ai-agent-papers-analysis-2026-04.md
docs/test-cases/: docker-verification.md
scripts/: autonomous-dev.sh  autonomous-review.sh  create-gitee-repo.sh  dispatcher-cron.sh  openclaw-agent.sh  push-to-gitee.sh  push-to-remote.sh  verify-docker-build.sh
templates/: incident-report.md
tests/: requirements.txt  run_tests.sh  test_gazebo_launch.py  test_moveit_config.py  test_ur5_description.py
ur5_gazebo_ros2/: docker-compose.yml
ur5_gazebo_ros2/docker/: Dockerfile  entrypoint.sh
ur5_gazebo_ros2/ur5_bringup/: CMakeLists.txt  README.md  package.xml
ur5_gazebo_ros2/ur5_bringup/config/: ur5.rviz
ur5_gazebo_ros2/ur5_bringup/launch/: control.launch.py  rviz.launch.py  ur5_bringup.launch.py
ur5_gazebo_ros2/ur5_control/: CMakeLists.txt  README.md  package.xml
ur5_gazebo_ros2/ur5_control/config/: ur5_controllers.yaml
ur5_gazebo_ros2/ur5_description/: CMakeLists.txt  package.xml
ur5_gazebo_ros2/ur5_description/config/: ur5_params.yaml
ur5_gazebo_ros2/ur5_description/urdf/: ur5.ros2_control.xacro  ur5.urdf.xacro  ur5_macro.xacro
ur5_gazebo_ros2/ur5_examples/: CMakeLists.txt  README.md  package.xml
ur5_gazebo_ros2/ur5_examples/examples/: joint_trajectory_example.py  pick_place_example.py
ur5_gazebo_ros2/ur5_examples/scripts/: demo.py
ur5_gazebo_ros2/ur5_gazebo/: CMakeLists.txt  package.xml
ur5_gazebo_ros2/ur5_gazebo/launch/: gazebo.launch.py
ur5_gazebo_ros2/ur5_gazebo/scripts/: spawn_ur5.py
ur5_gazebo_ros2/ur5_gazebo/worlds/: empty.sdf  ur5_cell.world
ur5_gazebo_ros2/ur5_moveit_config/: CMakeLists.txt  README.md  package.xml
ur5_gazebo_ros2/ur5_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ur5.srdf
ur5_gazebo_ros2/ur5_moveit_config/launch/: moveit.launch.py
weekly-reports/: 2026-W16.md  template.md
