<?xml version="1.0"?>
<package format="3">
  <name>ur5_bringup</name>
  <version>0.1.0</version>
  <description>UR5 bringup launch files for Gazebo simulation</description>
  
  <maintainer email="user@example.com">UR5 Team</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ur5_description</depend>
  <depend>ur5_gazebo</depend>
  <depend>ur5_control</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>robot_state_publisher</depend>
  
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
