<?xml version="1.0"?>
<package format="3">
  <name>ur5_control</name>
  <version>0.1.0</version>
  <description>UR5 ros2_control configuration</description>
  
  <maintainer email="user@example.com">UR5 Team</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ur5_description</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
