<?xml version="1.0"?>
<package format="3">
  <name>ur5_description</name>
  <version>0.1.0</version>
  <description>UR5 robot description files (URDF/Xacro) for ROS2</description>
  
  <maintainer email="jhaiq@example.com">jhaiq</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
