<?xml version="1.0"?>
<package format="3">
  <name>ur5_examples</name>
  <version>0.1.0</version>
  <description>UR5 example code and demonstrations</description>
  
  <maintainer email="user@example.com">UR5 Team</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
