<?xml version="1.0"?>
<package format="3">
  <name>ur5_moveit_config</name>
  <version>0.1.0</version>
  <description>UR5 MoveIt2 configuration package</description>
  
  <maintainer email="user@example.com">UR5 Team</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ur5_description</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_simple_controller_manager</depend>
  
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
